force-app/main/default/objects/CCP2_Branch__c/CCP2_Branch__c.object-meta.xml
<CustomObject>
    <label>CCP2_Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branchs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>