force-app/main/default/objects/CCP2_Branch__c/fields/Building_Name_Company_name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name_Company_name__c</fullName>
    <label>Building Name/Company name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>