force-app/main/default/objects/CCP2_Branch__c/fields/cellPhone_No__c.field-meta.xml
<CustomField>
    <fullName>cellPhone_No__c</fullName>
    <label>cellPhone No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>