force-app/main/default/objects/CCP2_Branch__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <label>Contact No.(Telephone No.)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>