force-app/main/default/objects/CCP2_Branch__c/fields/Mention_Name__c.field-meta.xml
<CustomField>
    <fullName>Mention_Name__c</fullName>
    <label>Mention Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>