force-app/main/default/objects/CCP2_Branch__c/fields/Minicipalities__c.field-meta.xml
<CustomField>
    <fullName>Minicipalities__c</fullName>
    <label>Minicipalities</label>
    <length>200</length>
    <type>Text</type>
</CustomField>