force-app/main/default/objects/CCP2_Branch__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>