force-app/main/default/objects/CCP2_Branch__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>Prefecture</label>
    <length>200</length>
    <type>Text</type>
</CustomField>