force-app/main/default/objects/CCP2_Branch__c/fields/Tip_Number__c.field-meta.xml
<CustomField>
    <fullName>Tip_Number__c</fullName>
    <label>Tip Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>