force-app/main/default/objects/CCP2_Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Address__c</columns>
    <columns>Contact__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Contact_No__c</columns>
    <columns>Tip_Number__c</columns>
    <columns>Mention_Name__c</columns>
    <columns>Branch_Number__c</columns>
    <columns>Minicipalities__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Prefecture__c</columns>
    <columns>Street_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>